packages/parser/test/parser/E0146.txt
enum Test { One, Two
===== err =====
anonymous:1:21: ParseError: E0146 - Expected closing brace after enumeration declaration members
1 | enum Test { One, Two
  |                     ^
